--- a/styler.css
+++ b/styler.css
@@ -1,17 +1,15 @@
 body{
     background-color:#F9EFDB;
-    color:#638889 ;
+    color:#638889
 }
 
-.restofthings{
-    padding: 8px;
-    color:#9DBC98;
-}
+
 .center{
     margin-left: 40%;
     margin-right: 25%;
 }
 h1{
     margin-left: 20%;
-    margin-right: 25%;  
+    margin-right: 25%; 
+    color:#638889 ; 
 }
